fix scrollbar style

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -22,6 +22,7 @@
 
 ul {
   border-radius: 2px;
+  scrollbar-width: thin;
 
   &:focus-visible {
     outline: 2px solid $black;
